Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20584

Clicking on a disabled ListView's delegate breaks mouse interaction

XMLWordPrintable

    • 44f82f2078897270622581e1c3f385d12c3aba42 (qt/tqtc-qtdeclarative/5.12.0)

      1. Run the attached .qml in qmlviewer
      2. Click on the bottom rectangle
      3. Note it changes color on every click
      4. Click a list item
      5. Console logs "QGraphicsItem::ungrabMouse: not a mouse grabber"
      6. Click on bottom rectangle
      7. No response

      The ungrabMouse function in src/gui/graphicsview/qgraphicsscene.cpp seems to be fired but as there was no valid item to be clicked on, it just returns. Further clicks are no longer possible.

        For Gerrit Dashboard: QTBUG-20584
        # Subject Branch Project Status CR V

            martjone Martin Jones (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: