Clicking on a disabled ListView's delegate breaks mouse interaction

A disabled Flickable should not filter children.

Change-Id: I9f0d8fbfd0922b5c6a9eaffa69212867359f79e0
Fixes: QTBUG-20584
Reviewed-on: http://codereview.qt.nokia.com/2354
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Bea Lam <bea.lam@nokia.com>